fix styling on mobile displays

--- a/style.css
+++ b/style.css
@@ -217,23 +217,25 @@ h2 {
   .place-visited,
   .place-type,
   .submit,
-  .reset,
-  .date {
+  .reset {
     width: calc(100% - 2rem);
-    font-size: 16px;
+    font-size: 20px;
   }
   .date {
-    width: 100%;
+    font-size: 20px;
   }
   .place-visited,
   .place-type {
     height: auto;
-    font-size: 18px;
+    font-size: 20px;
+  }
+  .place-type {
+    margin-top: 0.2rem;
   }
   h2 {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
   }
   h3 {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
 }
